# k66

./: Cargo.toml  Makefile  README.md  WARNINGS.md
.circleci/: config.yml
examples/flash_led_lptmr/: Cargo.toml  Makefile  openocd.cfg
examples/flash_led_lptmr/src/: main.rs
src/: lib.rs
src/dmamux/: chcfg.rs
src/i2s0/: rcr3.rs  tcr3.rs
src/mcg/: c5.rs  c6.rs
src/porta/: pcr0.rs  pcr1.rs  pcr10.rs  pcr15.rs  pcr17.rs  pcr18.rs  pcr19.rs  pcr2.rs  pcr20.rs  pcr22.rs  pcr24.rs  pcr25.rs  pcr26.rs  pcr28.rs  pcr29.rs  pcr3.rs  pcr4.rs  pcr5.rs  pcr6.rs
src/portb/: pcr0.rs  pcr1.rs  pcr12.rs  pcr14.rs  pcr20.rs  pcr21.rs  pcr22.rs  pcr23.rs  pcr25.rs  pcr26.rs  pcr27.rs  pcr30.rs
src/portc/: pcr0.rs  pcr1.rs  pcr13.rs  pcr16.rs  pcr21.rs  pcr23.rs  pcr28.rs  pcr29.rs  pcr3.rs  pcr7.rs  pcr8.rs
src/portd/: pcr12.rs  pcr14.rs  pcr18.rs  pcr19.rs  pcr2.rs  pcr24.rs  pcr3.rs  pcr4.rs  pcr5.rs  pcr6.rs  pcr7.rs  pcr9.rs
src/porte/: pcr11.rs  pcr13.rs  pcr15.rs  pcr16.rs  pcr17.rs  pcr27.rs  pcr31.rs  pcr4.rs  pcr5.rs
src/spi1/: mcr.rs
