[package]
name = "k66"
version = "0.0.1"
authors = ["Steffen Vogel <post@steffenvogel.de>", "Stefan Hoelzl <stefan.hoelzl@posteo.de>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for Kinetis K66 microcontrollers"
keywords = ["arm", "cortex-m", "kinetis", "svd2rust"]
license = "MIT"
repository = "https://github.com/stv0g/k66"

[dependencies]
cortex-m = "0.5.8"
bare-metal = "0.2.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.5"

[features]
rt = ["cortex-m-rt/device"]

